static/css/base.css
html {
    height: 100%;
}

body {
    padding-top: 144px;
    height: calc(100vh - 164px);
    background-size: cover;
    color: #555;
    font-family: 'Chivo';
    padding-bottom: 80px;
} 

a {
   color: #283139; 
}

.header-padding {
    padding-top: 94px;
}

article {
    margin-top: 10px; 
}

.article-content {
    white-space: pre-wrap;
}

.padding-account {
    padding-left: 20px;  
    padding-right: 20px; 
}

/* over-ride font awesome default color */
.fab {
    color: grey; !important
}

.comment-crud {
    padding-top: 10px;
    padding-bottom: 22px;
}

footer {
    display: flex;
    align-items: center;
    justify-content: space-between; 
    color: #212529;
    position: ;
    bottom: 0;
    width: 100%;
    padding: 10px;
    display: inline;
}

.footer-social {
    display: flex;
    justify-content: flex-end;
    
}

.footer-icon {
    margin-right: 10px;
    display: flex;
    flex-direction: row-reverse;
}

.hero-text {
    align-items: flex-start;
    display: flex;
}
.logo-image {
    max-height: 100px;
    padding-left: 118px;
}

.blog-image {
    float: right;
    max-width: 400px;
}

.blog-image-list {
    float: right;
    max-width: 30vh;
}

/* from Bulma */
.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}

.logo-font {
    text-transform: uppercase;
}

.main-logo-link {
    width: fit-content;
    color: black;
    size: large;
}

.btn-nordic {
    background-color: #d7e1ea;
}

.shop-now-button {
    background: black;
    color: white;
    min-width: 260px;
}

.btn-black {
    background: black;
    color: white;
}

.btn-outline-black {
    background: white;
    color: black !important; /* use important to override link colors for <a> elements */
    border: 1px solid black;
}

.btn-outline-black:hover,
.btn-outline-black:active,
.btn-outline-black:focus {
    background: black;
    color: white !important;
}


.shop-now-button:hover,
.shop-now-button:active,
.shop-now-button:focus,
.btn-black:hover,
.btn-black:active,
.btn-black:focus {
    background: #222;
    color: white;
}

.text-black {
    color: #000 !important;
}

.border-black {
    border: 1px solid black !important;
}

.overlay {
	height: 100%;
	width: 100%;
	top: 0;
	left: 0;
	position: fixed;
	background: white;
	z-index: -1;
}

a.category-badge > span.badge:hover {
    background: #212529 !important;
    color: #fff !important;
}

.btt-button {
    height: 42px;
    width: 42px;
    position: fixed;
    bottom: 10px;
    right: 10px;
}

.btt-link,
.update-link,
.remove-item {
    cursor: pointer;
}

input[name='q']::placeholder {
    color: #aab7c4
}

.custom-hr {

        text-align: center; 
        line-height: 0px; 
        height: 1px; 
        padding: 20px 5%; 
        overflow: visible;
      
        /* ensure 1px gap between borders */
        -webkit-box-sizing: content-box;
        -moz-box-sizing: content-box;
        -ms-box-sizing: content-box;
        -o-box-sizing: content-box;
        box-sizing: content-box;
      }
      
      .custom-hr:after {
        content: url('/media/logo-hr.png');
        display: inline; 
        background-color: transparent; 
        padding: 0 5%; /* size of background color knockout */
      }
      
      /* opera doesn't render correctly. hide section sign */
      x:-o-prefocus, .custom-hr:after {
        content: "";
      }


/* ------------------------------- bootstrap toasts */

.message-container {
    position: fixed;
    top: 72px;
    right: 15px;
    z-index: 99999999999;
}

.custom-toast {
    overflow: visible;
}

.toast-capper {
    height: 2px;
}

/* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
.arrow-up {
    width: 0; 
    height: 0; 
    border-left: 4px solid transparent;
    border-right: 4px solid transparent; 
    border-bottom: 10px solid black;
    position: absolute;
    top: -10px;
    right: 36px;
}

/* Convenience classes - colors copied from Bootstrap */
.arrow-primary {
    border-bottom-color: #007bff !important;
}

.arrow-secondary {
    border-bottom-color: #6c757d !important;
}

.arrow-success {
    border-bottom-color: #28a745 !important;
}

.arrow-danger {
    border-bottom-color: #dc3545 !important;
}

.arrow-warning {
    border-bottom-color: #ffc107 !important;
}

.arrow-info {
    border-bottom-color: #17a2b8 !important;
}

.arrow-light {
    border-bottom-color: #f8f9fa !important;
}

.arrow-dark {
    border-bottom-color: #343a40 !important;
}

.bag-notification-wrapper {
    height: 100px;
    overflow-x: hidden;
    overflow-y: auto;
}

/* Mailchimp styling override */

#mc_embed_signup {
    background-color: #d7e1ea !important;
}

#mc_embed_signup .helper_text {
    background-color: #d7e1ea !important;
}

/* Allauth form formatting */

.allauth-form-inner-content p {
    margin-top: 1.5rem; /* mt-4 */
    color: #6c757d; /* text-secondary */
}

.allauth-form-inner-content input {
    border-color: #000;
    border-radius: 0;
}

.allauth-form-inner-content label:not([for='id_remember']) {
    display: none;
}

.allauth-form-inner-content input::placeholder {
    color: #aab7c4;
}

.allauth-form-inner-content button,
.allauth-form-inner-content input[type='submit'] {
	/* btn */
	display: inline-block;
    font-weight: 400;
    color: #fff;
    text-align: center;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-color: #000;
    border: 1px solid #000;
    padding: .375rem .75rem;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: 0;

    /* standard bootstrap btn transitions */
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}

.allauth-form-inner-content button:hover,
.allauth-form-inner-content input[type='submit']:hover {	
	color: #fff;
    background-color: #222;
    border-color: #222;
}

.allauth-form-inner-content a {
	color: #17a2b8; /* text-info */
}

.home-bg 
/* -------------------------------- Media Queries */

/* Slightly larger container on xl screens */
@media (min-width: 1200px) {
  .container {
    max-width: 1342px;
}

/* fixed top navbar only on medium and up */
@media (min-width: 992px) {
    .fixed-top-desktop-only {
        position: fixed;
        top: 0;
        right: 0;
        left: 0;
        z-index: 1030;
    }

    .header-container {
        padding-top: 364px;
    }
}

/* pad the top a bit when navbar is collapsed on mobile */
@media (max-width: 991px) {
    .header-container {
        padding-top: 116px;
    }

    .hero-text {
        flex-direction: column;
        align-items: center; 
        text-align: center; 
    }

    body {
        height: calc(100vh - 116px);
    }

    .custom-hr {
        margin: 20px auto; 
        width: 80%; 
      }
}

